# scheduler

./: .gitignore  dummy.json  pyproject.toml  requirements.txt
src/: cli.py  cli_app.py  gui.py  legacy.py  main.py  make_schedule.py  models.py  models_test.py  modify.py  my_logger.py  read_excel.py  read_toml.py  streamlit_app.py  write_excel.py
